
 22 Jan 2010; Roman v. Gemmeren <strowi@hasnoname.de>
 kdelibs-3.5.10-r{6,7}.ebuild,
  changed virtual/ghostscript to app-text/ghostscript-gpl

 18 Jan 2010; Roman v. Gemmeren <strowi@hasnoname.de>
 +kdelibs-3.5.10-r7.ebuild,
  fix bug 271372 (konqueror + my.ebay-crash)
  fix googlemaps map-display

*kdelibs-3.5.10-r8 (23 Feb 2010)

  23 Feb 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +files/kdelibs-p15-r1074156.patch, +kdelibs-3.5.10-r8.ebuild:
  Revision bump to track upstream branches/3.5

*kdelibs-4.3.2-r2 (14 Oct 2009)
*kdelibs-4.3.1-r2 (14 Oct 2009)

  14 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +kdelibs-4.3.1-r2.ebuild,
  +files/kdelibs-4.3.1-crash-on-konqueror-tabs.patch,
  -kdelibs-4.3.2-r1.ebuild, +kdelibs-4.3.2-r2.ebuild:
  Version bump. Remove old. Per bug #288793. Moved from overlay. Thx to
  reavertm.

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kdelibs-3.5.9.ebuild,
  -kdelibs-3.5.9-r1.ebuild, -kdelibs-3.5.9-r2.ebuild,
  -kdelibs-3.5.9-r3.ebuild, -kdelibs-3.5.10-r1.ebuild,
  -kdelibs-3.5.10-r2.ebuild, -kdelibs-3.5.10-r3.ebuild,
  -kdelibs-3.5.10-r4.ebuild, -kdelibs-3.5.10-r5.ebuild:
  Clean out cruft

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdelibs-4.3.1-r1.ebuild:
  amd64 stable wrt #287697

*kdelibs-4.3.2-r1 (09 Oct 2009)
*kdelibs-4.3.1-r1 (09 Oct 2009)

  09 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdelibs-4.3.1.ebuild, +kdelibs-4.3.1-r1.ebuild,
  +files/kdelibs-4.3.1-dom-docimpl-crash.patch,
  +files/kdelibs-4.3.1-fix-crash-on-konqueror-tabs.patch,
  -kdelibs-4.3.2.ebuild, +kdelibs-4.3.2-r1.ebuild,
  +files/kdelibs-4.3.2-fix-deadlock-in-KLocale.patch:
  Revision bump to backport patches. Move from kde-testing.

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> -kdelibs-4.3.0.ebuild:
  Drop KDE 4.3.0

*kdelibs-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> +kdelibs-4.3.2.ebuild:
  Version bump

  19 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org>