@@ -12,5 +12,6 @@ DIST kdelibs-3.5.10.tar.bz2 15614607 RMD160 4c960664283c83ebc8e68932ca9044336fcf
 EBUILD kdelibs-3.5.10-r6.ebuild 7412 RMD160 0a1c7f484807336f6223687ee18bd1ad7912c9b8 SHA1 c83cddf492e58882a94e7f24d46b830103ee0fe5 SHA256 89b3380613a9333765237b015f78bfde64e0d18a49c3a6fc0d27f8d52bbcab2e
 EBUILD kdelibs-3.5.10-r7.ebuild 7582 RMD160 874cdbd3e21b717c44522ab282a7fe66250a127f SHA1 1b3222e0ec4f4e14c7c27b3d520668b43cb4f525 SHA256 7fcc3d0526c809b53f206958e981703ef5ca2c631dcbf7c39a49ea385141a7a4
 EBUILD kdelibs-3.5.10-r8.ebuild 7457 RMD160 597ee32ca2b46a8c15da2ab64949f0ae531bf4d5 SHA1 7b3ebb53e7f3fcb25366f31d9cb4128a9fb7306b SHA256 48a7d927095fe7bc3ee63e77492aa0e38c849199677b42d5c78244ce4bcf8baa
-MISC ChangeLog 106235 RMD160 03352ada79ae9249693f43efcd2393624d086798 SHA1 d1431d616acc67c043870cf10fba2f3662fca863 SHA256 06378be624b3f8695d33c9609fb8699e3ac9758349c383229d9a93c4f15239e5
+EBUILD kdelibs-3.5.10-r9.ebuild 7567 RMD160 4acd886997cb700f8ebaf08d42c08e9cf8001ac4 SHA1 5bb4133151851c301b46f659fa83d553224a57b8 SHA256 c24105af9b55b4920b72d14c15d67025af6834056d438a56de3e6e44d70c5378
+MISC ChangeLog 106403 RMD160 5d933523e59fdc50df08066a291b3c9e184b2e6f SHA1 ad82d050e37211e7c8152759083a03ee6b00e35b SHA256 5ffd400ebd0f34c0f6e4980cdce0fc8e206c61b9de3bd144baf6f18a36407604
 MISC metadata.xml 375 RMD160 0a16bbd99eb0c4f3d89dbede17c5d6feea41c6ba SHA1 531b56c08557857a57c7833d2bab42cdf879b9a8 SHA256 3b5a8f2ca27aa45532679f3ab64756b02a953c5c11e86d9539cec95bab292b9b
